Fixes too small font size for figcaptions

--- a/sass/base/_vars.scss
+++ b/sass/base/_vars.scss
@@ -60,7 +60,7 @@ $font-scale-h3:              modular-scale(2); // 25.888px;
 $font-scale-h4:              modular-scale(1); // 18px;
 $font-scale-h5:              modular-scale(1); // 18px;
 $font-scale-h6:              modular-scale(1); // 18px;
-$font-scale-small:           modular-scale(-1); // 11px (14px);
+$font-scale-small:           14px;
 
 // Extends
 %base {
